Convert test applications to customer isolation in place
